# Sentimental-Analysis-on-Incoming-Helpdesk-Calls

./: POC (2).ipynb  POC.ipynb  Untitled.ipynb  int 395ngn.ppt  model.ipynb  patent.docx  pyproject.toml
datasets/: customer_support_with_sentiment.csv
