[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contractions>=0.1.73",
    "gensim>=4.4.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]
